- Console_Plugin macros removed, Console 3.0 incorporates all relevant
  features
- Transient status messages (replace all results, for example) are now
  shown for 10 seconds, instead of 2

+ Bug Fixes

- Help viewer will no longer print an exception if the toc.xml file
  could not be found
- Token backgrounds were not being drawn
- Printing didn't work on Java 2

* Version 3.2pre6

+ New Features

- jEditLauncher is a Windows native launcher for jEdit. It has an
  EditServer client written in native code for improved performance,
  and adds a command for starting jEdit to the Windows Explorer
  right-click menu (John Gellene)
- When running on Java 2, anti-aliasing can be enabled in the Text
  Area pane of Global Options dialog box. Replaces AntiAlias plugin,
  and works better, because Java2D text measurement code is used to
  calculate offsets
- Progress 4GL syntax highlighting (Patrick Tingen)

+ Enhancements

- PHP mode now highlights variables in string literals
- Repeating an action more than 20 times displayed a confirmation
  dialog, but character input could be repeated any number of times.
  Now, a confirmation dialog is displayed for large character inputs
  too.
- Documentation updates
- Updated set of sample macros (John Gellene)
- More XSL abbreviation updates (Ollie Rutherfurd)
- The functionality of the following macros has been moved to the
  corresponding plugins:
  - Go_to_Clipper (to Clipper plugin)
  - Go_to_Console (to Console plugin)
  - Show_Dual_Diff (to JDiff plugin)
- The Replace All command now shows the replacement results in the
  status bar, not in a dialog box
- The HyperSearch command now shows the number of matches found in the
  HyperSearch Results window, not in a dialog box
- The 'Reload' and 'Reload All Buffers' commands now save the caret
  position

+ Bug Fixes

- README.txt, CHANGES.txt, etc. were missing from jedit.jar
- Setting the file system browser's default path to 'favorites' didn't
  work