@@ -1,4 +1,5 @@
 [java]
+Br|BufferedReader $1 = new BufferedReader(\|);
 D|do\n{\n\t\|\n}\nwhile($1);
 E|Exception
 Ei|else if($1)\n{\n\t\|\n}
@@ -8,6 +9,7 @@ Fd|for(int $1 = $2 - 1; $1 >= 0; $1--)\n{\n\t\|\n}
 H|Hashtable
 I|if($1)\n{\n\t\|\n}
 IO|IOException
+N|$1 $2 = new $1(\|);
 O|Object
 P|public
 S|String
