@@ -1,0 +1,4 @@
+<html><body>If you know how to program in Java, you will find jEdit
+plugins very easy to write. See the
+<b>Writing Plugins</b> part of the jEdit user's guide
+(<b>Help</b>&gt;<b>jEdit Help</b>) to find out how.</body></html>
