@@ -1,0 +1,4 @@
+<html><body>If you use jEdit to edit HTML, you should install the <b>HTML</b>
+plugin, which adds a number of very useful features. Plugins can
+be downloaded and installed from within jEdit using the plugin manager
+(<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
