@@ -1,0 +1,4 @@
+<html><body>The very handy <b>JDiff</b> plugin shows two files side-by-side,
+highlighting the differences. Plugins can
+be downloaded and installed from within jEdit using the plugin manager
+(<b>Plugins</b>&gt;<b>Plugin Manager</b>).</body></html>
